# gvn

./: .gitignore  README.md  pyproject.toml
example/: example.gvn  home_work.gvn
src/: main.py
src/core/: dictionary.py  engine.py  parser.py  shape.py  visualizer.py
