[project]
name = "GVN"
version = "0.1.0"
description = "GVN - GVN is Vector Notation. It is a simple language for describing vector graphics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyinstaller>=6.11.1",
]
